security: harden auth, admin routes, and rate limiting

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ AUTH_FILE=./ownfoil-rs/auth.toml
 LIBRARY_FOLDER=/absolute/path/to/switch_games
 SCAN_INTERVAL_SECONDS=30
 OWNFOIL_PUBLIC=false
+OWNFOIL_INSECURE_ADMIN_COOKIE=false
